--- a/styles/objects_style.css
+++ b/styles/objects_style.css
@@ -58,6 +58,17 @@ main{
     margin: 0 150px 0 150px;
 }
 
+
+
+h1 {font-size: 48px;}
+h2 {font-size: 36px;}
+h3 {font-size: 32px;}
+h4 {font-size: 24px;}
+h5 {font-size: 16px;}
+h6 {font-size: 10px;}
+
+
+
 a{
     text-decoration: none;
     color: var(--text-color);
