--- a/styles/objects_style.css
+++ b/styles/objects_style.css
@@ -32,6 +32,7 @@
 
 
 
+
 body {
     background-color: var(--background-color);
     color: var(--text-color);
@@ -85,11 +86,11 @@ a{
     min-height: 200px;
     background-color: var(--card-background-color);
     padding: 15px;
-    margin: 10px 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     border-radius: 4px;
+    border: 2px solid var(--text-color);
 }
 
 .button {
