--- a/styles/mobile_style.css
+++ b/styles/mobile_style.css
@@ -1,17 +1,4 @@
 @media screen and (max-width: 768px) { 
-  header{
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-
-  nav{
-    margin-top: 10px;
-  }
-
   main{
     margin-left: 20px;
     margin-right: 20px;
@@ -34,85 +21,31 @@
     border-radius: 16px 16px 0 0;
   }
 
-  h1
-  {
-    font-size: 32px;
-    font-weight: 400;
-    line-height: 59px;
-
-    text-align: left;
-    letter-spacing: 0;
-    text-transform: uppercase;
-
-    color: #3e3e3e;
-  }
-  #practice {
-    font-size: 96px;
-    font-weight: 900;
-    line-height: 117px;
-    letter-spacing: 0%;
-    text-align: center;
-  }
+  h1 {font-size: 32px;}
 
   h2
   {
     font-size: 26px;
-    font-weight: 400;
-    line-height: 49px;
-
-    text-align: left;
-    letter-spacing: 0;
-
-    color: rgb(62, 62, 62);
   }
 
   h3
   {
     font-size: 20px;
-    font-weight: 400;
-    line-height: 39px;
-
-    text-align: left;
-    letter-spacing: 0;
-
-    color: rgb(62, 62, 62);
   }
 
   h4
   {
     font-size: 16px;
-    font-weight: 400;
-    line-height: 29px;
-
-    text-align: left;
-    letter-spacing: 0;
-
-    color: rgb(62, 62, 62);
   }
 
   h5
   {
     font-size: 12px;
-    font-weight: 400;
-    line-height: 24px;
-
-    text-align: left;
-    letter-spacing: 0;
-
-    color: rgb(62, 62, 62);
   }
 
   h6
   {
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 24px;
-
-    text-align: left;
-    letter-spacing: 0;
-
-    color: rgb(62, 62, 62);
-  }
+    font-size: 14px;}
 
   .button
   {
