--- a/styles/mobile_style.css
+++ b/styles/mobile_style.css
@@ -13,7 +13,8 @@
   }
 
   .container
-  {   
+  {
+    min-height: 300px;
     display: flex;
     flex-direction: column;
     padding: 0 0 0 0;
@@ -22,30 +23,11 @@
   }
 
   h1 {font-size: 32px;}
-
-  h2
-  {
-    font-size: 26px;
-  }
-
-  h3
-  {
-    font-size: 20px;
-  }
-
-  h4
-  {
-    font-size: 16px;
-  }
-
-  h5
-  {
-    font-size: 12px;
-  }
-
-  h6
-  {
-    font-size: 14px;}
+  h2 {font-size: 26px;}
+  h3 {font-size: 20px;}
+  h4 {font-size: 16px;}
+  h5 {font-size: 12px;}
+  h6 {font-size: 14px;}
 
   .button
   {
